force-app/main/default/objects/DRE__DTE_Plan__c/DRE__DTE_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <label>DTE Test Case</label>
    <nameField>
        <label>Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTE Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>