force-app/main/default/objects/DRE__DTE_Plan__c/fields/DRE__Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DRE__Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>