force-app/main/default/objects/DRE__DTE_Plan__c/fields/DRE__JobId__c.field-meta.xml
<CustomField>
    <fullName>DRE__JobId__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>