force-app/main/default/objects/DRE__DTE_Plan__c/fields/DRE__Last_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>DRE__Last_Run_DateTime__c</fullName>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>