force-app/main/default/objects/DRE__DTE_Plan__c/fields/DRE__Uid__c.field-meta.xml
<CustomField>
    <fullName>DRE__Uid__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>