force-app/main/default/objects/DRE__DTE_Plan__c/listViews/DRE__All.listView-meta.xml
<ListView>
    <fullName>DRE__All</fullName>
    <columns>NAME</columns>
    <columns>DRE__Description__c</columns>
    <columns>DRE__IsActive__c</columns>
    <columns>DRE__Last_Run_DateTime__c</columns>
    <columns>DRE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>